--- a/assets/client.css
+++ b/assets/client.css
@@ -1,7 +1,6 @@
 #output_buffer {
     width:100%;
     height:100%;
-    margin-bottom:10px;
     overflow:auto;
     font-family:monospace;
 }
@@ -10,5 +9,6 @@
     width:100%;
     font-family:monospace;
     position:absolute;
+    left:0px;
     bottom:0px;
 }
